@@ -3,6 +3,7 @@ HEAD
 	before restarting the daemons
 	+ Changed labels in cache exemptions form 'domain' to 'domain name
 	address' to make clearer the actual working of the feature
+	+ Better help messages for time period parameters
 1.3.13
 	+ Switching antivirus from clamavscan to clamdscan
 	+ Better MIME type check, removed false negatives with some subtypes
